--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "6.1.3",
-    "@angular/common": "6.1.3",
-    "@angular/compiler": "6.1.3",
-    "@angular/core": "6.1.3",
-    "@angular/forms": "6.1.3",
-    "@angular/http": "6.1.3",
-    "@angular/platform-browser": "6.1.3",
-    "@angular/platform-browser-dynamic": "6.1.3",
-    "@angular/router": "6.1.3",
+    "@angular/animations": "6.1.4",
+    "@angular/common": "6.1.4",
+    "@angular/compiler": "6.1.4",
+    "@angular/core": "6.1.4",
+    "@angular/forms": "6.1.4",
+    "@angular/http": "6.1.4",
+    "@angular/platform-browser": "6.1.4",
+    "@angular/platform-browser-dynamic": "6.1.4",
+    "@angular/router": "6.1.4",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "core-js": "^2.4.1",
     "rxjs": "^6.2.2",
@@ -39,10 +39,10 @@
     "bootstrap": "^4.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "6.1.4",
-    "@angular/compiler-cli": "6.1.3",
-    "@angular/language-service": "6.1.3",
+    "@angular-devkit/build-angular": "^0.7.5",
+    "@angular/cli": "6.1.5",
+    "@angular/compiler-cli": "6.1.4",
+    "@angular/language-service": "6.1.4",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
