--- a/SNImplementationDocs.csproj
+++ b/SNImplementationDocs.csproj
@@ -95,6 +95,7 @@
     <Content Include=".gitattributes" />
     <Content Include=".gitignore" />
     <Content Include=".gitmodules" />
+    <Content Include="ChangeManagement.html" />
     <Content Include="gh-pages\ColorEditor.html" />
     <Content Include="gh-pages\DevResources.html" />
     <Content Include="gh-pages\downloads\uatstats.txt" />
@@ -1275,6 +1276,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="cards.ts" />
+    <TypeScriptCompile Include="ChangeManagement.ts" />
     <TypeScriptCompile Include="colorBuilder.ts" />
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="IncidentManagement.ts" />
