--- a/SNImplementationDocs.csproj
+++ b/SNImplementationDocs.csproj
@@ -870,6 +870,192 @@
     <Content Include="gh-pages\lib\angular.js\i18n\angular-locale_zh.js" />
     <Content Include="gh-pages\lib\angular.js\i18n\angular-locale_zu-za.js" />
     <Content Include="gh-pages\lib\angular.js\i18n\angular-locale_zu.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table-locale-all.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table-locale-all.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table-vue.esm.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table-vue.esm.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table-vue.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table-vue.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\bootstrap-table.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\accent-neutralise\bootstrap-table-accent-neutralise.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\accent-neutralise\bootstrap-table-accent-neutralise.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\addrbar\bootstrap-table-addrbar.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\addrbar\bootstrap-table-addrbar.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\auto-refresh\bootstrap-table-auto-refresh.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\auto-refresh\bootstrap-table-auto-refresh.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\cell-input\bootstrap-table-cell-input.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\cell-input\bootstrap-table-cell-input.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\cell-input\bootstrap-table-cell-input.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\cell-input\bootstrap-table-cell-input.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\cookie\bootstrap-table-cookie.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\cookie\bootstrap-table-cookie.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\copy-rows\bootstrap-table-copy-rows.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\copy-rows\bootstrap-table-copy-rows.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\defer-url\bootstrap-table-defer-url.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\defer-url\bootstrap-table-defer-url.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\editable\bootstrap-table-editable.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\editable\bootstrap-table-editable.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\export\bootstrap-table-export.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\export\bootstrap-table-export.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\filter-control\bootstrap-table-filter-control.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\filter-control\bootstrap-table-filter-control.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\filter-control\bootstrap-table-filter-control.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\filter-control\bootstrap-table-filter-control.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\fixed-columns\bootstrap-table-fixed-columns.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\fixed-columns\bootstrap-table-fixed-columns.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\fixed-columns\bootstrap-table-fixed-columns.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\fixed-columns\bootstrap-table-fixed-columns.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\group-by-v2\bootstrap-table-group-by.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\group-by-v2\bootstrap-table-group-by.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\group-by-v2\bootstrap-table-group-by.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\group-by-v2\bootstrap-table-group-by.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\i18n-enhance\bootstrap-table-i18n-enhance.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\i18n-enhance\bootstrap-table-i18n-enhance.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\key-events\bootstrap-table-key-events.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\key-events\bootstrap-table-key-events.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\mobile\bootstrap-table-mobile.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\mobile\bootstrap-table-mobile.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\multiple-sort\bootstrap-table-multiple-sort.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\multiple-sort\bootstrap-table-multiple-sort.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\natural-sorting\bootstrap-table-natural-sorting.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\natural-sorting\bootstrap-table-natural-sorting.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\page-jump-to\bootstrap-table-page-jump-to.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\page-jump-to\bootstrap-table-page-jump-to.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\page-jump-to\bootstrap-table-page-jump-to.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\page-jump-to\bootstrap-table-page-jump-to.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\pipeline\bootstrap-table-pipeline.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\pipeline\bootstrap-table-pipeline.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\print\bootstrap-table-print.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\print\bootstrap-table-print.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\reorder-columns\bootstrap-table-reorder-columns.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\reorder-columns\bootstrap-table-reorder-columns.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\reorder-rows\bootstrap-table-reorder-rows.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\reorder-rows\bootstrap-table-reorder-rows.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\reorder-rows\bootstrap-table-reorder-rows.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\reorder-rows\bootstrap-table-reorder-rows.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\resizable\bootstrap-table-resizable.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\resizable\bootstrap-table-resizable.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\sticky-header\bootstrap-table-sticky-header.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\sticky-header\bootstrap-table-sticky-header.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\sticky-header\bootstrap-table-sticky-header.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\sticky-header\bootstrap-table-sticky-header.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\toolbar\bootstrap-table-toolbar.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\toolbar\bootstrap-table-toolbar.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\treegrid\bootstrap-table-treegrid.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\extensions\treegrid\bootstrap-table-treegrid.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-af-ZA.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-af-ZA.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ar-SA.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ar-SA.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ca-ES.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ca-ES.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-cs-CZ.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-cs-CZ.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-da-DK.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-da-DK.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-de-DE.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-de-DE.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-el-GR.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-el-GR.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-en-US.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-en-US.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-AR.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-AR.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-CL.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-CL.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-CR.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-CR.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-ES.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-ES.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-MX.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-MX.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-NI.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-NI.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-SP.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-es-SP.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-et-EE.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-et-EE.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-eu-EU.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-eu-EU.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-fa-IR.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-fa-IR.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-fi-FI.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-fi-FI.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-fr-BE.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-fr-BE.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-fr-FR.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-fr-FR.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-he-IL.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-he-IL.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-hr-HR.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-hr-HR.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-hu-HU.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-hu-HU.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-id-ID.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-id-ID.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-it-IT.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-it-IT.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ja-JP.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ja-JP.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ka-GE.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ka-GE.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ko-KR.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ko-KR.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ms-MY.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ms-MY.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-nb-NO.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-nb-NO.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-nl-NL.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-nl-NL.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-pl-PL.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-pl-PL.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-pt-BR.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-pt-BR.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-pt-PT.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-pt-PT.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ro-RO.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ro-RO.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ru-RU.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ru-RU.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-sk-SK.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-sk-SK.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-sv-SE.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-sv-SE.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-th-TH.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-th-TH.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-tr-TR.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-tr-TR.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-uk-UA.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-uk-UA.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ur-PK.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-ur-PK.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-uz-Latn-UZ.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-uz-Latn-UZ.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-vi-VN.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-vi-VN.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-zh-CN.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-zh-CN.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-zh-TW.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\locale\bootstrap-table-zh-TW.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\bulma\bootstrap-table-bulma.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\bulma\bootstrap-table-bulma.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\bulma\bootstrap-table-bulma.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\bulma\bootstrap-table-bulma.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\foundation\bootstrap-table-foundation.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\foundation\bootstrap-table-foundation.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\foundation\bootstrap-table-foundation.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\foundation\bootstrap-table-foundation.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\materialize\bootstrap-table-materialize.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\materialize\bootstrap-table-materialize.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\materialize\bootstrap-table-materialize.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\materialize\bootstrap-table-materialize.min.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\semantic\bootstrap-table-semantic.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\semantic\bootstrap-table-semantic.js" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\semantic\bootstrap-table-semantic.min.css" />
+    <Content Include="gh-pages\lib\bootstrap-table\themes\semantic\bootstrap-table-semantic.min.js" />
     <Content Include="gh-pages\lib\jquery\core.js" />
     <Content Include="gh-pages\lib\jquery\jquery.js" />
     <Content Include="gh-pages\lib\jquery\jquery.min.js" />
@@ -1282,6 +1468,7 @@
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="commonServiceNowDefinitions.ts" />
     <TypeScriptCompile Include="IncidentManagement.ts" />
+    <TypeScriptCompile Include="Scripts\typings\bootstrap-table\index.d.ts" />
     <TypeScriptCompile Include="Snippets.ts" />
     <TypeScriptCompile Include="sys.ts" />
     <TypeScriptCompile Include="regexTester.ts" />
