--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="angularjs.TypeScript.DefinitelyTyped" version="6.5.6" targetFramework="net45" />
   <package id="bootstrap.TypeScript.DefinitelyTyped" version="0.9.8" targetFramework="net45" />
+  <package id="bootstrap-table.TypeScript.DefinitelyTyped" version="0.0.6" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.TypeScript.MSBuild" version="3.4.5" targetFramework="net45" developmentDependency="true" />
