--- a/PageManager/PageManager.csproj
+++ b/PageManager/PageManager.csproj
@@ -64,6 +64,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Windows\assembly\GAC_MSIL\System.Management.Automation\1.0.0.0__31bf3856ad364e35\System.Management.Automation.dll</HintPath>
@@ -89,11 +90,14 @@
     <Compile Include="HtmlPage.Collection.cs" />
     <Compile Include="HtmlPage.cs" />
     <Compile Include="HtmlReaderWriter.cs" />
+    <Compile Include="ImageInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileUriCollection.cs" />
     <Compile Include="FileUriCollection.UriStrings.cs" />
     <Compile Include="QueryParameterCollection.cs" />
     <Compile Include="QueryParameterCollection.KeyValuePair.cs" />
+    <Compile Include="UriComponents.cs" />
+    <Compile Include="UriHelper.cs" />
     <Compile Include="XmlContent.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
