--- a/SNImplementationDocs.csproj
+++ b/SNImplementationDocs.csproj
@@ -1,6 +1,7 @@
 ﻿<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
+  <Import Project="packages\Microsoft.TypeScript.MSBuild.3.6.0\build\Microsoft.TypeScript.MSBuild.props" Condition="Exists('packages\Microsoft.TypeScript.MSBuild.3.6.0\build\Microsoft.TypeScript.MSBuild.props')" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props')" />
-  <Import Project="packages\Microsoft.TypeScript.MSBuild.3.4.5\build\Microsoft.TypeScript.MSBuild.props" Condition="Exists('packages\Microsoft.TypeScript.MSBuild.3.4.5\build\Microsoft.TypeScript.MSBuild.props')" />
   <Import Project="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -25,7 +26,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>3.5</TypeScriptToolsVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -73,9 +74,8 @@
     <TypeScriptSourceRoot />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
@@ -95,8 +95,8 @@
     <Content Include=".gitattributes" />
     <Content Include=".gitignore" />
     <Content Include=".gitmodules" />
-    <Content Include="ChangeManagement.html" />
-    <Content Include="gh-pages\ColorEditor.html" />
+    <Content Include="gh-pages\ChangeManagement.html" />
+    <Content Include="gh-pages\ColorBuilder.html" />
     <Content Include="gh-pages\DevNotes.html" />
     <Content Include="gh-pages\DevResources.html" />
     <Content Include="gh-pages\downloads\uatstats.txt" />
@@ -1086,16 +1086,19 @@
     <Content Include="gh-pages\lib\twitter-bootstrap\js\bootstrap.min.js" />
     <Content Include="gh-pages\RegexTester.html" />
     <Content Include="gh-pages\SiteDesignNotes.html" />
-    <Content Include="gh-pages\Template\collapsibleCardL0.htm" />
+    <Content Include="gh-pages\Template\appContent.htm" />
+    <Content Include="gh-pages\Template\imageIndex.htm" />
     <Content Include="gh-pages\Template\collapsibleCardL1.htm" />
     <Content Include="gh-pages\Template\collapsibleCardL2.htm" />
     <Content Include="gh-pages\Template\collapsibleCardL3.htm" />
+    <Content Include="gh-pages\Template\mainAppPageHead - Copy.htm" />
     <Content Include="gh-pages\Template\mainAppPageHead.htm" />
     <Content Include="gh-pages\Template\regexGroupContent.htm" />
     <Content Include="index.html" />
     <Content Include="PowerShell\pagetemplate.xml" />
     <Content Include="PowerShell\sys_properties_config.html" />
     <Content Include="PowerShell\sys_properties_list.xml" />
+    <Content Include="SecurityOperations.html" />
     <Content Include="ServiceNowScripts\ADPhotoTransformScript.js" />
     <Content Include="ServiceNowScripts\live_profile_update.js" />
     <Content Include="gh-pages\downloads\Logo\logo_army_dev.png" />
@@ -1113,7 +1116,7 @@
     <Content Include="gh-pages\images\adminSetup\SelectScope.png" />
     <Content Include="gh-pages\images\adminSetup\SettingsGear.PNG" />
     <Content Include="gh-pages\images\collapse.svg" />
-    <Content Include="gh-pages\images\ElevateRoles1.PNG" />
+    <Content Include="gh-pages\images\InitialConfig\ElevateRoles.PNG" />
     <Content Include="gh-pages\images\expand.svg" />
     <Content Include="gh-pages\images\initialConfig\bannerImageSetting_lg.png" />
     <Content Include="gh-pages\images\initialConfig\bannerImageSetting_sm.png" />
@@ -1453,7 +1456,7 @@
     <Content Include="tsconfig-old.json" />
     <Content Include="tslint.json" />
     <Content Include="gh-pages\downloads\HTMLTypeScriptApp.vsix" />
-    <Content Include="PowerShell\RefreshImageCatalog.ps1" />
+    <Content Include="PowerShell\GenerateImageCatalogJSON.ps1" />
     <None Include="PageManager.bat" />
     <None Include="PageManager.ps1" />
     <None Include="Web.Debug.config">
@@ -1468,6 +1471,7 @@
     <TypeScriptCompile Include="colorBuilder.ts" />
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="commonServiceNowDefinitions.ts" />
+    <TypeScriptCompile Include="ImageIndex.ts" />
     <TypeScriptCompile Include="IncidentManagement.ts" />
     <TypeScriptCompile Include="Scripts\typings\bootstrap-table\index.d.ts" />
     <TypeScriptCompile Include="Snippets.ts" />
@@ -1514,11 +1518,12 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
-    <Error Condition="!Exists('packages\Microsoft.TypeScript.MSBuild.3.4.5\build\Microsoft.TypeScript.MSBuild.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.TypeScript.MSBuild.3.4.5\build\Microsoft.TypeScript.MSBuild.props'))" />
-    <Error Condition="!Exists('packages\Microsoft.TypeScript.MSBuild.3.4.5\build\Microsoft.TypeScript.MSBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.TypeScript.MSBuild.3.4.5\build\Microsoft.TypeScript.MSBuild.targets'))" />
     <Error Condition="!Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('packages\Microsoft.TypeScript.MSBuild.3.6.0\build\Microsoft.TypeScript.MSBuild.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.TypeScript.MSBuild.3.6.0\build\Microsoft.TypeScript.MSBuild.props'))" />
+    <Error Condition="!Exists('packages\Microsoft.TypeScript.MSBuild.3.6.0\build\Microsoft.TypeScript.MSBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.TypeScript.MSBuild.3.6.0\build\Microsoft.TypeScript.MSBuild.targets'))" />
+    <Error Condition="!Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
-  <Import Project="packages\Microsoft.TypeScript.MSBuild.3.4.5\build\Microsoft.TypeScript.MSBuild.targets" Condition="Exists('packages\Microsoft.TypeScript.MSBuild.3.4.5\build\Microsoft.TypeScript.MSBuild.targets')" />
+  <Import Project="packages\Microsoft.TypeScript.MSBuild.3.6.0\build\Microsoft.TypeScript.MSBuild.targets" Condition="Exists('packages\Microsoft.TypeScript.MSBuild.3.6.0\build\Microsoft.TypeScript.MSBuild.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
