--- a/packages.config
+++ b/packages.config
@@ -4,7 +4,8 @@
   <package id="bootstrap.TypeScript.DefinitelyTyped" version="0.9.8" targetFramework="net45" />
   <package id="bootstrap-table.TypeScript.DefinitelyTyped" version="0.0.6" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net45" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net46" />
-  <package id="Microsoft.TypeScript.MSBuild" version="3.4.5" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.TypeScript.Compiler" version="3.1.5" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.TypeScript.MSBuild" version="3.6.0" targetFramework="net45" developmentDependency="true" />
   <package id="popper.js.TypeScript.DefinitelyTyped" version="0.0.1" targetFramework="net45" />
 </packages>
