--- a/SnServerDev/tsconfig.json
+++ b/SnServerDev/tsconfig.json
@@ -4,10 +4,10 @@
     "noImplicitAny": false,
     "noEmitOnError": true,
     "removeComments": false,
+    "sourceMap": true,
     "target": "es5",
     "module": "none",
-    "lib": [ "es5" ],
-    "sourceMap": false
+    "typeRoots": [ "SnTypings" ]
   },
   "exclude": [
     "node_modules"
